<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="result">Result</string>
    <string name="equal">=</string>
</resources>