<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/multiply"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="24dp"
        android:text="@string/multiplication"
        android:textSize="40sp"
        android:background="@drawable/button_circle"
        app:layout_constraintBottom_toTopOf="@+id/division"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/division"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="200dp"
        android:text="@string/division"
        android:textSize="40sp"
        android:background="@drawable/button_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="200dp"
        android:text="@string/minus"
        android:textSize="40sp"
        android:background="@drawable/button_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addition"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:text="@string/plus"
        android:textSize="40sp"
        android:background="@drawable/button_circle"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        android:autofillHints="number"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/resultBTN"
        android:onClick="setResult"
        android:layout_width="140dp"
        android:layout_height="75dp"
        android:layout_marginBottom="104dp"
        android:text="@string/equal"
        android:textSize="40sp"
        android:background="@drawable/button_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>